--- a/dot.html
+++ b/dot.html
@@ -1,28 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Safety Dashboard</title>
     <style>
-        /* PUT ALL YOUR CSS (STYLES) HERE */
-        body { background: #000; color: #fff; font-family: sans-serif; }
-        .safety-dashboard { display: none; padding: 20px; }
-        /* ... existing styles ... */
+        body { 
+            background-color: #0f172a; 
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            min-height: 100vh; 
+            margin: 0; 
+            font-family: 'Inter', sans-serif;
+            color: white;
+        }
+        .container {
+            border: 2px solid #ffcc00;
+            padding: 40px;
+            border-radius: 12px;
+            text-align: center;
+            background: #1e293b;
+            width: 80%;
+            max-width: 600px;
+        }
+        .number { font-size: 80px; font-weight: 900; color: #ffcc00; margin: 0; }
+        .label { font-size: 14px; letter-spacing: 2px; text-transform: uppercase; color: #94a3b8; }
+        #ticker-title { font-size: 18px; margin-bottom: 10px; opacity: 0.8; }
     </style>
 </head>
 <body>
 
-    <div class="safety-dashboard">
-        <h1 id="ticker-title">Loading...</h1>
-        <div id="days">0</div>
-        </div>
+    <div class="container">
+        <div id="ticker-title">LOADING DATA...</div>
+        <p class="number" id="days">0</p>
+        <p class="label">Days Since Last Accident</p>
+    </div>
 
     <script>
-        /* PUT ALL THE CODE FROM YOUR SCREENSHOT HERE */
-        const SHEET_ID = '19sNWZ7NxHaE8Zjlzs57vZAKA_XBHBebPKAd59vUyjzc';
-        const API_KEY = 'AIzaSyAGpCyqpw0isbwpVTSi2KfG3gpuGYu86F4';
-        const RANGE = "'Last Acc'!A1:B3";
+        // Replace this with your actual published CSV link from Google Sheets
+        const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vS_.../pub?output=csv';
 
         async function initDashboard() {
-            // ... the rest of the code from the screenshot ...
+            try {
+                const response = await fetch(CSV_URL);
+                const csvText = await response.text();
+                const rows = csvText.split('\n').map(row => row.split(','));
+
+                // Update Title from Cell A1 and Date from B2
+                if (rows.length > 0) {
+                    document.getElementById('ticker-title').innerText = rows[0][0];
+                    const accidentDate = new Date(rows[1][1]).getTime();
+
+                    if (!isNaN(accidentDate)) {
+                        setInterval(() => {
+                            const now = new Date().getTime();
+                            const diff = Math.max(0, now - accidentDate);
+                            document.getElementById('days').innerText = Math.floor(diff / 86400000);
+                        }, 1000);
+                    }
+                }
+            } catch (e) {
+                document.getElementById('ticker-title').innerText = "CONNECTION ERROR";
+            }
         }
         initDashboard();
     </script>
