Update CSV URL to include cache parameter
Append cache-busting parameter to CSV URL.

--- a/dot.html
+++ b/dot.html
@@ -40,7 +40,7 @@
 
     <script>
         // Use the actual published CSV link you provided
-        const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSXwF-92T09SgCmFnFLk6NjAWwK52BxFpyivdtrFtFWv-c4DdrF1jgpgZg7jWsyASCqVP7TxyDKVuH4/pub?output=csv';
+        const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSXwF-92T09SgCmFnFLk6NjAWwK52BxFpyivdtrFtFWv-c4DdrF1jgpgZg7jWsyASCqVP7TxyDKVuH4/pub?output=csv' + '&cache=' + new Date().getTime();
 
         async function initDashboard() {
             try {
