--- a/dot.html
+++ b/dot.html
@@ -5,26 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Safety Dashboard</title>
     <style>
-        body { 
-            background-color: #0f172a; 
-            display: flex; 
-            justify-content: center; 
-            align-items: center; 
-            min-height: 100vh; 
-            margin: 0; 
-            font-family: 'Inter', sans-serif;
-            color: white;
-        }
-        .container {
-            border: 4px solid #ffcc00;
-            padding: 40px;
-            border-radius: 20px;
-            text-align: center;
-            background: #1e293b;
-            box-shadow: 0 0 30px rgba(255, 204, 0, 0.2);
-            width: 80%;
-            max-width: 600px;
-        }
+        body { background-color: #0f172a; display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; font-family: 'Inter', sans-serif; color: white; }
+        .container { border: 4px solid #ffcc00; padding: 40px; border-radius: 20px; text-align: center; background: #1e293b; box-shadow: 0 0 30px rgba(255, 204, 0, 0.2); width: 80%; max-width: 600px; }
         .number { font-size: 80px; font-weight: 900; color: #ffcc00; margin: 10px 0; }
         .label { font-size: 14px; letter-spacing: 2px; text-transform: uppercase; color: #94a3b8; }
         #ticker-title { font-size: 22px; margin-bottom: 10px; color: #fff; font-weight: bold; }
@@ -39,20 +21,41 @@
     </div>
 
     <script>
-        // Use the actual published CSV link you provided
-        const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSXwF-92T09SgCmFnFLk6NjAWwK52BxFpyivdtrFtFWv-c4DdrF1jgpgZg7jWsyASCqVP7TxyDKVuH4/pub?output=csv' + '&cache=' + new Date().getTime();
+        const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSXwF-92T09SgCmFnFLk6NjAWwK52BxFpyivdtrFtFWv-c4DdrF1jgpgZg7jWsyASCqVP7TxyDKVuH4/pub?output=csv&cache=' + new Date().getTime();
 
         async function initDashboard() {
             try {
                 const response = await fetch(CSV_URL);
-                const csvText = await response.text();
+                if (!response.ok) throw new Error('Sheet not found');
                 
-                // Parse CSV into rows and cells
+                const csvText = await response.text();
                 const rows = csvText.split('\n').map(row => row.split(','));
 
-                if (rows.length > 0) {
-                    // Title from A1
+                if (rows.length >= 2) {
+                    // 1. Set Title from A1
                     document.getElementById('ticker-title').innerText = rows[0][0].replace(/"/g, '');
                     
-                    // Date from B2
-                    const rawDate = rows[1][1].
+                    // 2. Parse Date from B2
+                    const rawDateStr = rows[1][1].replace(/"/g, '').trim();
+                    const accidentDate = new Date(rawDateStr).getTime();
+
+                    if (!isNaN(accidentDate)) {
+                        // Start the actual counter
+                        setInterval(() => {
+                            const now = new Date().getTime();
+                            const diff = Math.max(0, now - accidentDate);
+                            document.getElementById('days').innerText = Math.floor(diff / 86400000);
+                        }, 1000);
+                    } else {
+                        document.getElementById('ticker-title').innerText = "DATE FORMAT ERROR (Check B2)";
+                    }
+                }
+            } catch (e) {
+                console.error(e);
+                document.getElementById('ticker-title').innerText = "CONNECTION ERROR: Check Publish Settings";
+            }
+        }
+        initDashboard();
+    </script>
+</body>
+</html>
