--- a/clean_ins.html
+++ b/clean_ins.html
@@ -1,3 +1,47 @@
+<div id="dynamic-bar-chart"></div>
+
+<style>
+  #dynamic-bar-chart {
+    padding: 20px;
+    background: #1e293b; /* Dark theme to match your screenshot */
+    border-radius: 8px;
+    color: white;
+    font-family: 'Inter', sans-serif;
+  }
+  .bar-wrapper {
+    margin-bottom: 15px;
+  }
+  .bar-label {
+    font-size: 0.875rem;
+    font-weight: 600;
+    margin-bottom: 5px;
+    display: block;
+  }
+  .winner-label {
+    color: #facc15; /* Gold for the top performer */
+  }
+  .bar-track {
+    background: #334155;
+    height: 24px;
+    border-radius: 4px;
+    width: 100%;
+    overflow: hidden;
+  }
+  .bar-fill {
+    height: 100%;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 10px;
+    transition: width 1.5s cubic-bezier(0.1, 0.5, 0.5, 1); /* Animation effect */
+  }
+  .bar-value {
+    font-size: 0.75rem;
+    font-weight: 800;
+  }
+</style>
+
 <script>
     /* JavaScript Logic - Updated to use CSV */
     const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSXwF-92T09SgCmFnFLk6NjAWwK52BxFpyivdtrFtFWv-c4DdrF1jgpgZg7jWsyASCqVP7TxyDKVuH4/pub?gid=0&single=true&output=csv';
@@ -15,19 +59,20 @@
         const response = await fetch(CSV_URL);
         const csvText = await response.text();
         
-        // Simple CSV Parser: splits by line, then by comma
-        const rows = csvText.split('\n').map(row => row.split(','));
+        // Clean up quotes and split rows correctly
+        const rows = csvText.trim().split('\n').map(row => 
+          row.split(',').map(cell => cell.replace(/"/g, '').trim())
+        );
 
         if (!rows || rows.length <= 1) {
           console.error('No data found in CSV.');
           return;
         }
 
-        // Slice(1) skips the header row
         const chartData = rows.slice(1).map(row => ({
-          terminal: row[0].trim(),
+          terminal: row[0],
           value: parseInt(row[1]) || 0
-        })).filter(item => item.terminal !== ""); // filter out empty rows
+        })).filter(item => item.terminal !== "");
 
         renderChart(chartData);
       } catch (error) {
@@ -37,6 +82,7 @@
 
     function renderChart(data) {
       const container = document.getElementById('dynamic-bar-chart');
+      if (!container) return;
       container.innerHTML = ''; 
       
       const maxValue = Math.max(...data.map(d => d.value), 1);
@@ -50,7 +96,7 @@
           <div class="bar-wrapper">
             <div class="bar-label ${isWinner ? 'winner-label' : ''}">${item.terminal}</div>
             <div class="bar-track">
-              <div class="bar-fill ${isWinner ? 'winner-bar' : ''}" 
+              <div class="bar-fill" 
                    style="width: 0%; background-color: ${color};" 
                    data-width="${widthPercentage}%">
                 <span class="bar-value">${item.value}</span>
@@ -61,6 +107,7 @@
         container.innerHTML += barHtml;
       });
 
+      // Triggers the slide-out animation after rendering
       setTimeout(() => {
         document.querySelectorAll('.bar-fill').forEach(bar => {
           bar.style.width = bar.getAttribute('data-width');
@@ -69,4 +116,4 @@
     }
 
     fetchSheetData();
-  </script>
+</script>
