--- a/clean_ins.html
+++ b/clean_ins.html
@@ -1,119 +1,88 @@
-<div id="dynamic-bar-chart"></div>
-
-<style>
-  #dynamic-bar-chart {
-    padding: 20px;
-    background: #1e293b; /* Dark theme to match your screenshot */
-    border-radius: 8px;
-    color: white;
-    font-family: 'Inter', sans-serif;
-  }
-  .bar-wrapper {
-    margin-bottom: 15px;
-  }
-  .bar-label {
-    font-size: 0.875rem;
-    font-weight: 600;
-    margin-bottom: 5px;
-    display: block;
-  }
-  .winner-label {
-    color: #facc15; /* Gold for the top performer */
-  }
-  .bar-track {
-    background: #334155;
-    height: 24px;
-    border-radius: 4px;
-    width: 100%;
-    overflow: hidden;
-  }
-  .bar-fill {
-    height: 100%;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding-right: 10px;
-    transition: width 1.5s cubic-bezier(0.1, 0.5, 0.5, 1); /* Animation effect */
-  }
-  .bar-value {
-    font-size: 0.75rem;
-    font-weight: 800;
-  }
-</style>
-
-<script>
-    /* JavaScript Logic - Updated to use CSV */
-    const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSXwF-92T09SgCmFnFLk6NjAWwK52BxFpyivdtrFtFWv-c4DdrF1jgpgZg7jWsyASCqVP7TxyDKVuH4/pub?gid=0&single=true&output=csv';
-
-    const terminalColors = {
-      "Birmingham": "#facc15",
-      "Scottsboro": "#84cc16",
-      "Broken Bow": "#0ea5e9",
-      "Starke": "#ef4444",
-      "Camden": "#10b981"
-    };
-
-    async function fetchSheetData() {
-      try {
-        const response = await fetch(CSV_URL);
-        const csvText = await response.text();
-        
-        // Clean up quotes and split rows correctly
-        const rows = csvText.trim().split('\n').map(row => 
-          row.split(',').map(cell => cell.replace(/"/g, '').trim())
-        );
-
-        if (!rows || rows.length <= 1) {
-          console.error('No data found in CSV.');
-          return;
-        }
-
-        const chartData = rows.slice(1).map(row => ({
-          terminal: row[0],
-          value: parseInt(row[1]) || 0
-        })).filter(item => item.terminal !== "");
-
-        renderChart(chartData);
-      } catch (error) {
-        console.error('Error fetching CSV data:', error);
-      }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Top Performer Dashboard</title>
+  <style>
+    body { 
+      margin: 0; 
+      background: #0f172a; 
+      display: flex; 
+      justify-content: center; 
+      align-items: center; 
+      min-height: 100vh; 
+      font-family: 'Inter', sans-serif;
     }
 
-    function renderChart(data) {
-      const container = document.getElementById('dynamic-bar-chart');
-      if (!container) return;
-      container.innerHTML = ''; 
+    #dynamic-bar-chart {
+      width: 90%;
+      max-width: 1000px;
+      padding: 25px;
+      background: #1e293b;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    }
+
+    .bar-wrapper { margin-bottom: 20px; }
+
+    .bar-label {
+      color: #94a3b8;
+      font-size: 0.9rem;
+      font-weight: 600;
+      margin-bottom: 8px;
+      transition: all 0.3s ease;
+    }
+
+    .bar-track {
+      background: #334155;
+      height: 28px;
+      border-radius: 6px;
+      width: 100%;
+      overflow: hidden;
+      position: relative;
+    }
+
+    /* CONSTANT ANIMATION FOR ALL BARS */
+    .bar-fill {
+      height: 100%;
+      border-radius: 6px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      padding-right: 12px;
+      transition: width 1.5s cubic-bezier(0.1, 0.5, 0.5, 1);
+      position: relative;
       
-      const maxValue = Math.max(...data.map(d => d.value), 1);
-
-      data.forEach(item => {
-        const isWinner = item.value === maxValue && maxValue > 0;
-        const widthPercentage = (item.value / maxValue) * 100;
-        const color = terminalColors[item.terminal] || "#64748b";
-
-        const barHtml = `
-          <div class="bar-wrapper">
-            <div class="bar-label ${isWinner ? 'winner-label' : ''}">${item.terminal}</div>
-            <div class="bar-track">
-              <div class="bar-fill" 
-                   style="width: 0%; background-color: ${color};" 
-                   data-width="${widthPercentage}%">
-                <span class="bar-value">${item.value}</span>
-              </div>
-            </div>
-          </div>
-        `;
-        container.innerHTML += barHtml;
-      });
-
-      // Triggers the slide-out animation after rendering
-      setTimeout(() => {
-        document.querySelectorAll('.bar-fill').forEach(bar => {
-          bar.style.width = bar.getAttribute('data-width');
-        });
-      }, 100);
+      /* Subtle background pulse for every bar */
+      animation: bar-pulse 3s infinite ease-in-out;
     }
 
-    fetchSheetData();
-</script>
+    .bar-value {
+      color: white;
+      font-size: 0.8rem;
+      font-weight: 800;
+      z-index: 2;
+    }
+
+    /* WINNER STYLES: Constant Flash & Glow */
+    .winner-label {
+      color: #facc15 !important;
+      animation: text-glow 1.5s infinite ease-in-out;
+      font-weight: 800;
+      transform: scale(1.02);
+    }
+
+    .winner-bar {
+      box-shadow: 0 0 15px rgba(250, 204, 21, 0.5);
+      animation: winner-flash 1.5s infinite ease-in-out !important;
+    }
+
+    /* KEYFRAMES */
+    @keyframes bar-pulse {
+      0%, 100% { filter: brightness(1); }
+      50% { filter: brightness(1.2); }
+    }
+
+    @keyframes winner-flash {
+      0%, 100% { filter: brightness(1.1) saturate(1.2); box-shadow: 0 0 10px #facc15
