Fix bar label display for winners

--- a/clean_ins.html
+++ b/clean_ins.html
@@ -144,7 +144,7 @@
 
         container.innerHTML += `
           <div class="bar-wrapper">
-            <span class="bar-label ${isWinner ? 'winner-label' : ''}">${item.terminal} ${isWinner ? '★ TOP' : ''}</span>
+            <span class="bar-label ${isWinner ? 'winner-label' : ''}">${item.terminal} ${isWinner ? '- Leader' : ''}</span>
             <div class="bar-track">
               <div class="bar-fill ${isWinner ? 'winner-bar' : ''}" 
                    style="width: 0%; background-image: ${gradient};" 
