--- a/TOP_Lp.html
+++ b/TOP_Lp.html
@@ -7,7 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   
   <style>
-    /* CSS from CodePen */
     body {
       background: #000;
       font-family: 'Inter', sans-serif;
@@ -36,7 +35,6 @@
       font-size: 0.85rem;
     }
 
-    /* Gold Blink for #1 spot */
     .top-spot {
       background: #451a03;
       border-left: 6px solid #fbbf24;
@@ -77,34 +75,36 @@
   </div>
 
   <script>
-    /* JavaScript from CodePen */
     async function updateLeaderboard() {
-      const API_KEY = 'AIzaSyAGpCyqpw0isbwpVTSi2KfG3gpuGYu86F4'; 
-      const SHEET_ID = '19sNWZ7NxHaE8Zjlzs57vZAKA_XBHBebPKAd59vUyjzc';
-      const RANGE = 'Driver Revenue Company!A2:P200'; 
+      // NEW CSV URL
+      const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSXwF-92T09SgCmFnFLk6NjAWwK52BxFpyivdtrFtFWv-c4DdrF1jgpgZg7jWsyASCqVP7TxyDKVuH4/pub?gid=1773248352&single=true&output=csv';
 
       try {
-        const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`);
-        const data = await response.json();
+        const response = await fetch(CSV_URL);
+        const csvText = await response.text();
+        
+        // Simple CSV parser: split by line, then by comma
+        const rows = csvText.split('\n').map(row => row.split(','));
         const container = document.getElementById('driver-stats-container');
         
-        if (!data.values) return;
+        // Skip the header row (A1:P1)
+        const dataRows = rows.slice(1);
 
-        // Map and clean data for sorting
-        let drivers = data.values.map(row => ({
-          id: row[0],
-          milesE: row[4],
-          milesL: row[5],
-          dh: row[8],
-          rev: row[12],
-          adrValue: parseFloat(row[15]?.replace(/[^0-9.-]+/g, "")) || 0,
-          adrRaw: row[15]
-        }));
+        // Map data based on the column indices from your sheet
+        let drivers = dataRows.map(row => ({
+          id: row[0],        // Column A
+          milesE: row[4],    // Column E
+          milesL: row[5],    // Column F
+          dh: row[8],        // Column I
+          rev: row[12],      // Column M
+          adrValue: parseFloat(row[15]?.replace(/[^0-9.-]+/g, "")) || 0, // Column P
+          adrRaw: row[15]    // Column P
+        })).filter(d => d.id); // Remove empty rows
 
         // Sort by Highest ADR
         drivers.sort((a, b) => b.adrValue - a.adrValue);
 
-        // Render Top 7 (as per your script logic)
+        // Render Top 7
         container.innerHTML = '';
         drivers.slice(0, 7).forEach((driver, index) => {
           const isFirst = index === 0;
@@ -123,20 +123,3 @@
             <div class="stat-group">
               <span class="label">DH% / REVENUE</span>
               <span class="val">${driver.dh} | ${driver.rev}</span>
-            </div>
-            <div class="stat-group">
-              <span class="label">ADR</span>
-              <span class="val highlight adr-color">${driver.adrRaw}</span>
-            </div>
-          `;
-          container.appendChild(card);
-        });
-      } catch (e) {
-        console.error("Dashboard failed to load:", e);
-      }
-    }
-
-    updateLeaderboard();
-  </script>
-</body>
-</html>
